[package]
name = "epcexplorer"
description = "A tool to explore UHF RFID tags"
version = "0.1.0"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/russss/epcexplorer"
authors = ["Russ Garrett <russ@garrett.co.uk>"]
edition = "2018"

[dependencies]
ru5102 = "0.1.0"
gs1 = "0.1.3"
tui = "0.6.2"
termion = "1.5"
failure = "0.1.5"
hex = "0.3.1"

[[bin]]
name = "epcexplorer"
path = "main.rs"
